--- a/configs/data_config.json
+++ b/configs/data_config.json
@@ -373,5 +373,59 @@
         "test_file_quelevel": "test_sequences_quelevel.csv",
         "test_window_file_quelevel": "test_window_sequences_quelevel.csv",
         "test_original_file_quelevel": "test_quelevel.csv"
+    },
+    "falconcode_2_2": {
+        "dpath": "./data/falconcode/fcc_2_2",
+        "num_q": 246,
+        "num_c": 22,
+        "input_type": [
+            "questions",
+            "concepts"
+        ],
+        "max_concepts": 12,
+        "min_seq_len": 3,
+        "maxlen": 200,
+        "emb_path": "",
+        "train_valid_original_file": "train_valid.csv",
+        "train_valid_file": "train_valid_sequences.csv",
+        "folds": [
+            0,
+            1,
+            2,
+            3,
+            4
+        ],
+        "test_original_file": "test.csv",
+        "test_file": "test_sequences.csv",
+        "test_window_file": "test_window_sequences.csv",
+        "test_question_file": "test_question_sequences.csv",
+        "test_question_window_file": "test_question_window_sequences.csv"
+    },
+    "falconcode_2_3": {
+        "dpath": "./data/falconcode",
+        "num_q": 330,
+        "num_c": 22,
+        "input_type": [
+            "questions",
+            "concepts"
+        ],
+        "max_concepts": 12,
+        "min_seq_len": 3,
+        "maxlen": 200,
+        "emb_path": "",
+        "train_valid_original_file": "train_valid.csv",
+        "train_valid_file": "train_valid_sequences.csv",
+        "folds": [
+            0,
+            1,
+            2,
+            3,
+            4
+        ],
+        "test_original_file": "test.csv",
+        "test_file": "test_sequences.csv",
+        "test_window_file": "test_window_sequences.csv",
+        "test_question_file": "test_question_sequences.csv",
+        "test_question_window_file": "test_question_window_sequences.csv"
     }
 }
